# rust-market-data-api

./: Cargo.toml  LICENSE  README.md
src/: app.rs  error.rs  lib.rs  main.rs  state.rs
src/handlers/: health.rs  metrics.rs  mod.rs  orderbook.rs  ticker.rs
src/market/: mod.rs  model.rs  store.rs
src/middleware/: metrics.rs  mod.rs
tests/: health_test.rs  orderbook_test.rs  ticker_test.rs
tests/common/: mod.rs
